--- a/data_access_notebooks/roi_access.ipynb
+++ b/data_access_notebooks/roi_access.ipynb
@@ -1,6 +1,20 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Accessing area-level annotations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Required imports and setting up connections"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
@@ -12,6 +26,7 @@
    "source": [
     "# Intern allows us to access boss resources https://docs.theboss.io/docs/getting-started-intern\n",
     "# You do not need to modify this cell, it will connect to the bossdb for you. \n",
+    "\n",
     "from intern.remote.boss import BossRemote\n",
     "from intern.resource.boss.resource import *\n",
     "import numpy as np\n",
@@ -19,6 +34,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# Setup and connection parameters\n",
+    "\n",
     "connection_params={\n",
     "    'protocol':'https',\n",
     "    'host':'api.bossdb.io',\n",
@@ -28,6 +44,7 @@
     "# Dataset dimensions are z:[0,720], y:[0,1420], x:[0,5805]\n",
     "# Data beyond these ranges will be padded with 0 values\n",
     "#BossDB access uses an [inclusive_index,exclusive_index] format, so [0,10] specifies 10 index values 0-9\n",
+    "\n",
     "data_params={\n",
     "    'prasad_coll':'prasad',\n",
     "    'prasad_exp' : 'prasad2020',\n",
@@ -40,6 +57,7 @@
     "}\n",
     "\n",
     "#create connection objects\n",
+    "\n",
     "rmt = BossRemote(connection_params)\n",
     "chan_pixel = ChannelResource(data_params['pixel_annotation_channel'], data_params['prasad_coll'], data_params['prasad_exp'],\n",
     "                             'annotation', datatype='uint64', sources=data_params['prasad_channel'])\n",
@@ -47,6 +65,29 @@
     "                             'annotation', datatype='uint64', sources=data_params['prasad_channel'])\n",
     "chan_roi_interp = ChannelResource(data_params['roi_interp_channel'], data_params['prasad_coll'], data_params['prasad_exp'],\n",
     "                             'annotation', datatype='uint64', sources=data_params['prasad_channel'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Select z-slice to download area-level annotations for"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Labels:<br>\n",
+    "0 = Clear<br>\n",
+    "1 = Cortex<br>\n",
+    "2 = Striatum<br>\n",
+    "3 = TRN<br>\n",
+    "4 = Ventral Posterior (VP)<br>\n",
+    "5 = Zona Incerta (ZI)<br>\n",
+    "6 = Internal Capsule (IC)<br>\n",
+    "7 = Hypothalamus<br>\n",
+    "8 = Corpus Callosum<br>"
    ]
   },
   {
@@ -88,23 +129,12 @@
     "#Manually annotated Regions of Interest (ROI)\n",
     "#Several z slices were manually annotated to indicate Regions of interest\n",
     "\n",
-    "#    Labels\n",
-    "#    \"Clear Label\" = 0\n",
-    "#    \"cortex\" = 1\n",
-    "#    \"striatum\" = 2\n",
-    "#    \"trn\" = 3\n",
-    "#    \"vp\" = 4\n",
-    "#    \"zona incerta\" = 5\n",
-    "#    \"internal capsule\" = 6\n",
-    "#    \"hypothalamus\" = 7\n",
-    "#    \"corpus callosum\" = 8\n",
-    "\n",
     "#The following z slices were hand annotated\n",
     "z_vals = [109,159,209,259,309,359,409,410,460]\n",
     "xrange = [0,5805]\n",
     "yrange = [0,1420]\n",
     "\n",
-    "#select your favorite z slice\n",
+    "#select your favorite z slice (in this case, 259)\n",
     "zrange = [259,260] #selects a single slice, bossDB indexes [inclusive,exclusive]\n",
     "\n",
     "#Get the ROI Annotation from bossDB\n",
@@ -115,6 +145,20 @@
     "print(np.max(roi_cutout_data))\n",
     "print(np.min(roi_cutout_data))\n",
     "plt.imshow(np.squeeze(roi_cutout_data[0,:,:]/8.0))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Download area-level annotations for multiple slices"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Warning!!! - This downloads a large chunk of data and may take a while"
    ]
   },
   {
@@ -153,20 +197,7 @@
     }
    ],
    "source": [
-    "#Interpolated Regions of Interest (ROI)\n",
-    "#The z slices that were manually annotated were interpolated across a range of z slices\n",
-    "#Warning- this downloads a large portion of the volume, and may take a while\n",
-    "\n",
-    "#    Labels\n",
-    "#    \"Clear Label\" = 0\n",
-    "#    \"cortex\" = 1\n",
-    "#    \"striatum\" = 2\n",
-    "#    \"trn\" = 3\n",
-    "#    \"vp\" = 4\n",
-    "#    \"zona incerta\" = 5\n",
-    "#    \"internal capsule\" = 6\n",
-    "#    \"hypothalamus\" = 7\n",
-    "#    \"corpus callosun\" = 8\n",
+    "#The z slices that were manually annotated (and are numbered in the cell above) were interpolated across a range of z slices\n",
     "\n",
     "xrange = [0,5805]\n",
     "yrange = [0,1420]\n",
@@ -212,7 +243,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
