--- a/data_access_notebooks/raw_data_access.ipynb
+++ b/data_access_notebooks/raw_data_access.ipynb
@@ -1,6 +1,20 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Accessing raw data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Required imports and setting up connections"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {
@@ -12,6 +26,7 @@
    "source": [
     "# Intern allows us to access boss resources https://docs.theboss.io/docs/getting-started-intern\n",
     "# You do not need to modify this cell, it will connect to the bossdb for you. \n",
+    "\n",
     "from intern.remote.boss import BossRemote\n",
     "from intern.resource.boss.resource import *\n",
     "import numpy as np\n",
@@ -19,6 +34,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# Setup and connection parameters\n",
+    "\n",
     "connection_params={\n",
     "    'protocol':'https',\n",
     "    'host':'api.bossdb.io',\n",
@@ -28,6 +44,7 @@
     "# Dataset dimensions are z:[0,720], y:[0,1420], x:[0,5805]\n",
     "# Data beyond these ranges will be padded with 0 values\n",
     "#BossDB access uses an [inclusive_index,exclusive_index] format, so [0,10] specifies 10 index values 0-9\n",
+    "\n",
     "data_params={\n",
     "    'prasad_coll':'prasad',\n",
     "    'prasad_exp' : 'prasad2020',\n",
@@ -45,6 +62,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Set the coordinates for data volume to be pulled down and download the same"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
@@ -52,10 +76,13 @@
    "source": [
     "#Change the xrange, yrange, zrange to get the data you need. Valid dimensions are \n",
     "#z:[0,720], y:[0,1420], x:[0,5805]\n",
+    "\n",
     "xrange = [1100,1400]\n",
     "yrange = [300,600]\n",
     "zrange =[300,500]\n",
+    "\n",
     "# Get the Raw Data from bossDB\n",
+    "\n",
     "raw_cutout_data = rmt.get_cutout(raw_chan_actual, data_params['prasad_res'], xrange, yrange, zrange)"
    ]
   },
@@ -99,18 +126,34 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Save downloaded data as numpy (data type = uint8)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "#save as numpy\n",
+    "\n",
     "#data is unsigned, 8 bit integers (uint8)\n",
     "#Data is save in ZYX format\n",
+    "\n",
     "filename = 'example_cutout_z'+str(zrange[0])+'_'+str(zrange[1]) \\\n",
     "    +'_y'+str(yrange[0])+'_'+str(yrange[1]) \\\n",
     "    + '_x'+ str(xrange[0])+'_'+str(xrange[1]) + '.npy'\n",
     "np.save(filename,raw_cutout_data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Save downloaded data as hdf5 (data type = uint8)"
    ]
   },
   {
@@ -120,8 +163,10 @@
    "outputs": [],
    "source": [
     "#save as hdf5 file\n",
+    "\n",
     "#data is unsigned, 8 bit integers (uint8)\n",
     "#Data is save in ZYX format\n",
+    "\n",
     "import h5py\n",
     "filename = 'example_cutout_z'+str(zrange[0])+'_'+str(zrange[1]) \\\n",
     "    +'_y'+str(yrange[0])+'_'+str(yrange[1]) \\\n",
@@ -132,14 +177,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Save downloaded data as tiff (data type = uint8)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "#save as tiff image file\n",
+    "\n",
     "#data is unsigned, 8 bit integers (uint8)\n",
     "#Data is save in ZYX format\n",
+    "\n",
     "from tifffile import imsave\n",
     "filename = 'example_cutout_z'+str(zrange[0])+'_'+str(zrange[1]) \\\n",
     "    +'_y'+str(yrange[0])+'_'+str(yrange[1]) \\\n",
@@ -175,7 +229,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
