--- a/data_access_notebooks/annotation_access.ipynb
+++ b/data_access_notebooks/annotation_access.ipynb
@@ -1,6 +1,20 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Accessing pixel-level annotations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Required imports and setting up connections"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 25,
    "metadata": {
@@ -12,6 +26,7 @@
    "source": [
     "# Intern allows us to access boss resources https://docs.theboss.io/docs/getting-started-intern\n",
     "# You do not need to modify this cell, it will connect to the bossdb for you. \n",
+    "\n",
     "from intern.remote.boss import BossRemote\n",
     "from intern.resource.boss.resource import *\n",
     "import numpy as np\n",
@@ -19,6 +34,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# Setup and connection parameters\n",
+    "\n",
     "connection_params={\n",
     "    'protocol':'https',\n",
     "    'host':'api.bossdb.io',\n",
@@ -28,6 +44,7 @@
     "# Dataset dimensions are z:[0,720], y:[0,1420], x:[0,5805]\n",
     "# Data beyond these ranges will be padded with 0 values\n",
     "#BossDB access uses an [inclusive_index,exclusive_index] format, so [0,10] specifies 10 index values 0-9\n",
+    "\n",
     "data_params={\n",
     "    'prasad_coll':'prasad',\n",
     "    'prasad_exp' : 'prasad2020',\n",
@@ -39,7 +56,8 @@
     "    'prasad_res' : 0, #Native resolution of dataset is 1.17um, 1.17um, 1.17um per voxel=\n",
     "}\n",
     "\n",
-    "#create connection objecgts\n",
+    "#create connection objects\n",
+    "\n",
     "rmt = BossRemote(connection_params)\n",
     "chan_pixel = ChannelResource(data_params['pixel_annotation_channel'], data_params['prasad_coll'], data_params['prasad_exp'],\n",
     "                             'annotation', datatype='uint64', sources=data_params['prasad_channel'])\n",
@@ -47,6 +65,36 @@
     "                             'annotation', datatype='uint64', sources=data_params['prasad_channel'])\n",
     "chan_roi_interp = ChannelResource(data_params['roi_interp_channel'], data_params['prasad_coll'], data_params['prasad_exp'],\n",
     "                             'annotation', datatype='uint64', sources=data_params['prasad_channel'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Downloading pixel-level annotations from different regions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note: Pixel level annotations are present at the following slices: <br>\n",
+    "z = [140, 170,200,230,260,290,320,350,380,410,440,470] (wrt original dataset)<br>\n",
+    "z = [30,60,90,120,150,180,210,240,270,300,330,360] (wrt z-range [110,471])\n",
+    "<br>\n",
+    "<br>\n",
+    "Pixel-level annotations:<br>\n",
+    "0 = Backgroud (Tissue)<br>\n",
+    "1 = Blood Vessel<br>\n",
+    "2 = Cell<br>\n",
+    "3 = Myelinated axon (white matter)<br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Pixel-level annotations in the Cortex"
    ]
   },
   {
@@ -85,15 +133,9 @@
     }
    ],
    "source": [
-    "#Microstructure \n",
     "#Region 1: Cortex\n",
-    "#Codes\n",
-    "# background = 0\n",
-    "# blood vessel = 1\n",
-    "# cell = 2\n",
-    "# myelinated axon (white matter) = 3\n",
+    "\n",
     "#Full coordinates of Manual coritical annotations\n",
-    "# The annotations are valid for z=[140,170,200,230,260,290,320,350,380,410,440,470]\n",
     "xrange=[4600,4857]\n",
     "yrange=[900,1157]\n",
     "zrange=[110,471]\n",
@@ -107,6 +149,13 @@
     "print(np.max(anno_cutout_data))\n",
     "print(np.min(anno_cutout_data))\n",
     "plt.imshow(np.squeeze(anno_cutout_data[300,:,:]/3.0))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Pixel-level annotations in the Striatum"
    ]
   },
   {
@@ -145,15 +194,7 @@
     }
    ],
    "source": [
-    "#Microstructure \n",
     "#Region 2: Striatum\n",
-    "#Codes\n",
-    "# background = 0\n",
-    "# blood vessel = 1\n",
-    "# cell = 2\n",
-    "# myelinated axon = 3\n",
-    "# The annotations are valid for z=[140,170,200,230,260,290,320,350,380,410,440,470]\n",
-    "#channel pixel_annotation\n",
     "\n",
     "xrange=[3700,3957]\n",
     "yrange=[500,757]\n",
@@ -161,12 +202,20 @@
     "\n",
     "#Get the Annotation from bossDB\n",
     "anno_cutout_data = rmt.get_cutout(chan_pixel, data_params['prasad_res'], xrange,\n",
-    "                                 yrange, zrange)\n",
+    "                                 yrange, zrange\n",
+    "                                  \n",
     "# zero indexed Z slices equal to multiples of 30 are valid, [30,60,90,120,150,180,210,240,270,300,330,360]\n",
     "print(anno_cutout_data.shape) #Data are Z,Y,X\n",
     "print(np.max(anno_cutout_data))\n",
     "print(np.min(anno_cutout_data))\n",
     "plt.imshow(np.squeeze(anno_cutout_data[300,:,:]/3.0))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Pixel-level annotations in the Thalamus (mostly VP + some TRN)"
    ]
   },
   {
@@ -205,15 +254,7 @@
     }
    ],
    "source": [
-    "#Microstructure \n",
     "#Region 3: Thalamus (contains mostly VP and some TRN)\n",
-    "#Codes\n",
-    "# background = 0\n",
-    "# blood vessel = 1\n",
-    "# cell = 2\n",
-    "# myelinated axon = 3\n",
-    "# The annotations are valid for z=[140,170,200,230,260,290,320,350,380,410,440,470]\n",
-    "#channel pixel_annotation\n",
     "\n",
     "xrange=[3063,3320]\n",
     "yrange=[850,1107]\n",
@@ -222,11 +263,19 @@
     "#Get the Annotation from bossDB\n",
     "anno_cutout_data = rmt.get_cutout(chan_pixel, data_params['prasad_res'], xrange,\n",
     "                                 yrange, zrange)\n",
+    "\n",
     "# zero indexed Z slices equal to multiples of 30 are valid, [30,60,90,120,150,180,210,240,270,300,330,360]\n",
     "print(anno_cutout_data.shape) #Data are Z,Y,X\n",
     "print(np.max(anno_cutout_data))\n",
     "print(np.min(anno_cutout_data))\n",
     "plt.imshow(np.squeeze(anno_cutout_data[300,:,:]/3.0))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Pixel-level annotations in the ZI"
    ]
   },
   {
@@ -265,15 +314,7 @@
     }
    ],
    "source": [
-    "#Microstructure \n",
     "#Region 4: ZI\n",
-    "#Codes\n",
-    "# background = 0\n",
-    "# blood vessel = 1\n",
-    "# cell = 2\n",
-    "# myelinated axon = 3\n",
-    "# The annotations are valid for z=[140,170,200,230,260,290,320,350,380,410,440,470]\n",
-    "#channel pixel_annotation\n",
     "\n",
     "xrange=[1543,1800]\n",
     "yrange=[650,907]\n",
@@ -282,6 +323,7 @@
     "#Get the Annotations from bossDB\n",
     "anno_cutout_data = rmt.get_cutout(chan_pixel, data_params['prasad_res'], xrange,\n",
     "                                 yrange, zrange)\n",
+    "\n",
     "# zero indexed Z slices equal to multiples of 30 are valid, [30,60,90,120,150,180,210,240,270,300,330,360]\n",
     "print(anno_cutout_data.shape) #Data are Z,Y,X\n",
     "print(np.max(anno_cutout_data))\n",
@@ -317,7 +359,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
