--- a/data_access_notebooks/mask_roi_example.ipynb
+++ b/data_access_notebooks/mask_roi_example.ipynb
@@ -1,6 +1,20 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Accessing raw data from specific ROIs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Required imports and setting up connections"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 27,
    "metadata": {
@@ -12,6 +26,7 @@
    "source": [
     "# Intern allows us to access boss resources https://docs.theboss.io/docs/getting-started-intern\n",
     "# You do not need to modify this cell, it will connect to the bossdb for you. \n",
+    "\n",
     "from intern.remote.boss import BossRemote\n",
     "from intern.resource.boss.resource import *\n",
     "import numpy as np\n",
@@ -19,6 +34,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# Setup and connection parameters\n",
+    "\n",
     "connection_params={\n",
     "    'protocol':'https',\n",
     "    'host':'api.bossdb.io',\n",
@@ -28,6 +44,7 @@
     "# Dataset dimensions are z:[0,720], y:[0,1420], x:[0,5805]\n",
     "# Data beyond these ranges will be padded with 0 values\n",
     "#BossDB access uses an [inclusive_index,exclusive_index] format, so [0,10] specifies 10 index values 0-9\n",
+    "\n",
     "data_params={\n",
     "    'prasad_coll':'prasad',\n",
     "    'prasad_exp' : 'prasad2020',\n",
@@ -40,6 +57,7 @@
     "}\n",
     "\n",
     "#create connection objects\n",
+    "\n",
     "rmt = BossRemote(connection_params)\n",
     "chan_raw = ChannelResource(data_params['prasad_channel'], data_params['prasad_coll'], data_params['prasad_exp'],\n",
     "                             'annotation', datatype='uint8', sources=data_params['prasad_channel'])\n",
@@ -47,6 +65,35 @@
     "                             'annotation', datatype='uint64', sources=data_params['prasad_channel'])\n",
     "chan_roi_interp = ChannelResource(data_params['roi_interp_channel'], data_params['prasad_coll'], data_params['prasad_exp'],\n",
     "                             'annotation', datatype='uint64', sources=data_params['prasad_channel'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Download area from specific ROI + Pixel-level annotations for the same"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Area-level annotations:<br>\n",
+    "0 = Clear<br>\n",
+    "1 = Cortex<br>\n",
+    "2 = Striatum<br>\n",
+    "3 = TRN<br>\n",
+    "4 = Ventral Posterior (VP)<br>\n",
+    "5 = Zona Incerta (ZI)<br>\n",
+    "6 = Internal Capsule (IC)<br>\n",
+    "7 = Hypothalamus<br>\n",
+    "8 = Corpus Callosum<br>\n",
+    "<br>\n",
+    "Pixel-level annotations:<br>\n",
+    "0 = Backgroud (Tissue)<br>\n",
+    "1 = Blood Vessel<br>\n",
+    "2 = Cell<br>\n",
+    "3 = Myelinated axon (white matter)<br>"
    ]
   },
   {
@@ -67,25 +114,6 @@
     "#Change Xrange, Yrange, ZRange here, and the value of region to see other areas\n",
     "\n",
     "#Pull a large volume, mask out only the target region of interest\n",
-    "#Combine this with the pixel level annotations\n",
-    "#Display a slice\n",
-    "#Several z slices were manually annotated to indicate Regions of interest\n",
-    "#    Labels\n",
-    "#    \"Clear Label\" = 0\n",
-    "#    \"cortex\" = 1\n",
-    "#    \"striatum\" = 2\n",
-    "#    \"trn\" = 3\n",
-    "#    \"vp\" = 4\n",
-    "#    \"zona incerta\" = 5\n",
-    "#    \"internal capsule\" = 6\n",
-    "#    \"hypothalamus\" = 7\n",
-    "#    \"corpus callosun\" = 8\n",
-    "# Pixel level annotations\n",
-    "#    background = 0\n",
-    "#    blood vessel = 1\n",
-    "#    cell = 2\n",
-    "#    myelinated axon (white matter) = 3\n",
-    "\n",
     "region = 2\n",
     "\n",
     "#Striatum examples\n",
@@ -94,18 +122,22 @@
     "# yrange=[500,757]\n",
     "# zrange=[110,471]\n",
     "\n",
-    "#Boundaries example\n",
+    "#Set boundaries\n",
     "xrange = [3000,4500]\n",
     "yrange = [400,900]\n",
+    "\n",
     "#The valid z values for the interpolation are z=117 to 460\n",
     "zrange = [150,300]\n",
+    "\n",
     "\n",
     "#Get the ROI Annotation from bossDB\n",
     "raw_cutout_data = rmt.get_cutout(chan_raw, data_params['prasad_res'], xrange,\n",
     "                                 yrange, zrange)\n",
+    "\n",
     "#Get the ROI Annotation from bossDB\n",
     "roi_cutout_data = rmt.get_cutout(chan_roi_interp, data_params['prasad_res'], xrange,\n",
     "                                 yrange, zrange)\n",
+    "\n",
     "\n",
     "#Get the ROI Annotation from bossDB\n",
     "anno_cutout_data = rmt.get_cutout(chan_pixel, data_params['prasad_res'], xrange,\n",
@@ -116,6 +148,13 @@
     "anno_cutout_data[roi_cutout_data!=region] = 0 #zero out data that is not striatum\n",
     "print(np.max(anno_cutout_data))\n",
     "print(anno_cutout_data.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Plot raw data after mask"
    ]
   },
   {
@@ -145,8 +184,14 @@
     }
    ],
    "source": [
-    "#Plot raw data after mask\n",
     "plt.imshow(np.squeeze(raw_cutout_data[20,:,:]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Plot pixel-level annotation data after mask"
    ]
   },
   {
@@ -176,7 +221,6 @@
     }
    ],
    "source": [
-    "#Plot annotation data after mask\n",
     "plt.imshow(np.squeeze(anno_cutout_data[20,:,:]/3.0))"
    ]
   },
@@ -208,7 +252,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
