--- a/data_access_notebooks/low_res_volume.ipynb
+++ b/data_access_notebooks/low_res_volume.ipynb
@@ -1,6 +1,20 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Accessing low-resolution data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Required imports and setting up connections"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 29,
    "metadata": {
@@ -12,6 +26,7 @@
    "source": [
     "# Intern allows us to access boss resources https://docs.theboss.io/docs/getting-started-intern\n",
     "# You do not need to modify this cell, it will connect to the bossdb for you. \n",
+    "\n",
     "from intern.remote.boss import BossRemote\n",
     "from intern.resource.boss.resource import *\n",
     "import numpy as np\n",
@@ -19,6 +34,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# Setup and connection parameters\n",
+    "\n",
     "connection_params={\n",
     "    'protocol':'https',\n",
     "    'host':'api.bossdb.io',\n",
@@ -28,6 +44,7 @@
     "# Dataset dimensions are z:[0,720], y:[0,1420], x:[0,5805]\n",
     "# Data beyond these ranges will be padded with 0 values\n",
     "#BossDB access uses an [inclusive_index,exclusive_index] format, so [0,10] specifies 10 index values 0-9\n",
+    "\n",
     "data_params={\n",
     "    'prasad_coll':'prasad',\n",
     "    'prasad_exp' : 'prasad2020',\n",
@@ -40,11 +57,19 @@
     "}\n",
     "\n",
     "#create connection objects\n",
+    "\n",
     "rmt = BossRemote(connection_params)\n",
     "chan_raw = ChannelResource(data_params['prasad_channel'], data_params['prasad_coll'], data_params['prasad_exp'],\n",
     "                             'annotation', datatype='uint8', sources=data_params['prasad_channel'])\n",
     "chan_roi_interp = ChannelResource(data_params['roi_interp_channel'], data_params['prasad_coll'], data_params['prasad_exp'],\n",
     "                             'annotation', datatype='uint64', sources=data_params['prasad_channel'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Download low-resoution version of dataset "
    ]
   },
   {
@@ -82,21 +107,13 @@
    ],
    "source": [
     "#Pull low-resoution version of dataset for quick visualization of data including Interpolated Regions of Interest (ROI)\n",
-    "#    Labels\n",
-    "#    \"Clear Label\" = 0\n",
-    "#    \"cortex\" = 1\n",
-    "#    \"striatum\" = 2\n",
-    "#    \"trn\" = 3\n",
-    "#    \"vp\" = 4\n",
-    "#    \"zona incerta\" = 5\n",
-    "#    \"internal capsule\" = 6\n",
-    "#    \"hypothalamus\" = 7\n",
-    "#    \"corpus callosum\" = 8\n",
     "#This is useful for quick access and visualization\n",
     "\n",
     "# Dataset dimensions are z:[0,720], y:[0,1420], x:[0,5805]\n",
+    "\n",
     "#Pull the entire dataset at a lower resolution version- you can select integer values of res from 0 to 7\n",
     "res = 2\n",
+    "\n",
     "if res>0:\n",
     "    xrange = [0,int(5805/(2*res))]\n",
     "    yrange = [0,int(1420/(2*res))]\n",
@@ -107,7 +124,7 @@
     "    yrange = [0,1420]\n",
     "    zrange = [0,720]\n",
     "\n",
-    "#Get the ROI Annotation from bossDB\n",
+    "#Get data from bossDB\n",
     "low_res_raw_cutout_data = rmt.get_cutout(chan_raw, res, xrange, yrange, zrange)\n",
     "print(low_res_raw_cutout_data.shape) #Data are Z,Y,X, this is the shape of the downsampled data\n",
     "plt.imshow(np.squeeze(low_res_raw_cutout_data[150,:,:]))"
@@ -150,21 +167,13 @@
    ],
    "source": [
     "#Pull low-resoution version of dataset for quick visualization of data including Interpolated Regions of Interest (ROI)\n",
-    "#    Labels\n",
-    "#    \"Clear Label\" = 0\n",
-    "#    \"cortex\" = 1\n",
-    "#    \"striatum\" = 2\n",
-    "#    \"trn\" = 3\n",
-    "#    \"vp\" = 4\n",
-    "#    \"zona incerta\" = 5\n",
-    "#    \"internal capsule\" = 6\n",
-    "#    \"hypothalamus\" = 7\n",
-    "#    \"corpus callosum\" = 8\n",
     "#This is useful for quick access and visualization\n",
     "\n",
     "# Dataset dimensions are z:[0,720], y:[0,1420], x:[0,5805]\n",
+    "\n",
     "#Pull the entire dataset at a lower resolution version- you can select integer values of res from 0 to 7\n",
     "res = 2\n",
+    "\n",
     "if res>0:\n",
     "    xrange = [0,int(5805/(2*res))]\n",
     "    yrange = [0,int(1420/(2*res))]\n",
@@ -175,12 +184,12 @@
     "    yrange = [0,1420]\n",
     "    zrange = [0,720]\n",
     "\n",
-    "#Get the ROI Annotation from bossDB\n",
-    "low_res_roi_cutout_data = rmt.get_cutout(chan_roi_interp, res, xrange, yrange, zrange)\n",
-    "print(np.max(low_res_roi_cutout_data))\n",
-    "print(np.min(low_res_roi_cutout_data))\n",
-    "print(low_res_roi_cutout_data.shape) #Data are Z,Y,X, this is the shape of the downsampled data\n",
-    "plt.imshow(np.squeeze(low_res_roi_cutout_data[150,:,:]))"
+    "#Get the (Area-level) Annotation from bossDB\n",
+    "low_res_roi_cutout_anno = rmt.get_cutout(chan_roi_interp, res, xrange, yrange, zrange)\n",
+    "print(np.max(low_res_roi_cutout_anno))\n",
+    "print(np.min(low_res_roi_cutout_anno))\n",
+    "print(low_res_roi_cutout_anno.shape) #Data are Z,Y,X, this is the shape of the downsampled data\n",
+    "plt.imshow(np.squeeze(low_res_roi_cutout_anno[150,:,:]))"
    ]
   },
   {
@@ -246,7 +255,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
