--- a/data_access_notebooks/training_data_access.ipynb
+++ b/data_access_notebooks/training_data_access.ipynb
@@ -1,6 +1,20 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Accessing pixel-level annotations and corresponding raw data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Required imports and setting up connections"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
@@ -48,6 +62,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Download data from bossDB with pixel-level annotations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Striatum"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
@@ -66,15 +94,8 @@
     "#These are split into adjacent training and validation volumes along the z axis\n",
     "#This dataset is useful for developing 2D image segmentation approaches using these data\n",
     "\n",
-    "#Microstructure \n",
-    "#Region 2: Striatum\n",
-    "#Codes\n",
-    "# background = 0\n",
-    "# blood vessel = 1\n",
-    "# cell = 2\n",
-    "# myelinated axon = 3\n",
-    "\n",
     "# zero indexed Z slices equal to multiples of 30 are valid, [30,60,90,120,150,180,210,240,270,300,330,360]\n",
+    "\n",
     "z_slices = [30,60,90,120,150,180,210,240,270,300,330,360]\n",
     "\n",
     "xrange=[3700,3957]\n",
@@ -94,6 +115,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### TRN"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
@@ -109,16 +137,6 @@
    ],
    "source": [
     "#pull validation dataset from bossDB with pixel-level segmentation labels for the TRN region\n",
-    "\n",
-    "#Microstructure \n",
-    "#Region 3: Thalamus (contains VP and some TRN)\n",
-    "#Codes\n",
-    "# background = 0\n",
-    "# blood vessel = 1\n",
-    "# cell = 2\n",
-    "# myelinated axon = 3\n",
-    "# The annotations are valid for z=[140,170,200,230,260,290,320,350,380,410,440,470]\n",
-    "#channel pixel_annotation\n",
     "\n",
     "# zero indexed Z slices equal to multiples of 30 are valid, [30,60,90,120,150,180,210,240,270,300,330,360]\n",
     "z_slices = [30,60,90,120,150,180,210,240,270,300,330,360]\n",
@@ -167,7 +185,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
