Updated notebook wording

--- a/data_access_notebooks/annotation_access.ipynb
+++ b/data_access_notebooks/annotation_access.ipynb
@@ -215,7 +215,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Pixel-level annotations in the Thalamus (mostly VP + some TRN)"
+    "#### Pixel-level annotations in the VP"
    ]
   },
   {
@@ -254,7 +254,7 @@
     }
    ],
    "source": [
-    "#Region 3: Thalamus (contains mostly VP and some TRN)\n",
+    "#Region 3: VP\n",
     "\n",
     "xrange=[3063,3320]\n",
     "yrange=[850,1107]\n",
