Updated notebook wording

--- a/data_access_notebooks/training_data_access.ipynb
+++ b/data_access_notebooks/training_data_access.ipynb
@@ -118,7 +118,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### TRN"
+    "#### VP"
    ]
   },
   {
@@ -136,7 +136,7 @@
     }
    ],
    "source": [
-    "#pull validation dataset from bossDB with pixel-level segmentation labels for the TRN region\n",
+    "#pull validation dataset from bossDB with pixel-level segmentation labels for the VP region\n",
     "\n",
     "# zero indexed Z slices equal to multiples of 30 are valid, [30,60,90,120,150,180,210,240,270,300,330,360]\n",
     "z_slices = [30,60,90,120,150,180,210,240,270,300,330,360]\n",
