--- a/data_access_notebooks/annotation_access.ipynb
+++ b/data_access_notebooks/annotation_access.ipynb
@@ -202,7 +202,7 @@
     "\n",
     "#Get the Annotation from bossDB\n",
     "anno_cutout_data = rmt.get_cutout(chan_pixel, data_params['prasad_res'], xrange,\n",
-    "                                 yrange, zrange\n",
+    "                                 yrange, zrange)\n",
     "                                  \n",
     "# zero indexed Z slices equal to multiples of 30 are valid, [30,60,90,120,150,180,210,240,270,300,330,360]\n",
     "print(anno_cutout_data.shape) #Data are Z,Y,X\n",
